src/test/resources/test_data/error/initArrayNotFunction.smtx
main module initArrayNotFunction {
    @initarray(1, 2);
}